# TaskingAI-Python-Client

./: .env  .gitignore  CONTRIBUTING.md  README.md  openapi.json  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  test_requirements.txt
.github/: dependabot.yml
docs/: Assistant.md  AssistantApi.md  AssistantCreateRequestBodySchema.md  AssistantCreateResponseSchema.md  AssistantGetResponseSchema.md  AssistantListResponseSchema.md  AssistantUpdateRequestBodySchema.md  AssistantUpdateResponseSchema.md  BaseSuccessEmptyOutSchema.md  Chat.md  ChatCreateRequestBodySchema.md  ChatCreateResponseSchema.md  ChatGenerateRequestBodySchema.md  ChatGenerateResponseSchema.md  ChatGenerateUserMessage.md  ChatGetResponseSchema.md  ChatListResponseSchema.md  ChatUpdateRequestBodySchema.md  ChatUpdateResponseSchema.md  Chunk.md  ChunkQueryRequestBodySchema.md  ChunkQueryResponseSchema.md  Collection.md  CollectionCreateRequestBodySchema.md  CollectionCreateResponseSchema.md  CollectionGetResponseSchema.md  CollectionListResponseSchema.md  CollectionUpdateRequestBodySchema.md  CollectionUpdateResponseSchema.md  HTTPValidationError.md  Message.md  MessageContent.md  MessageGetResponseSchema.md  MessageListResponseSchema.md  MessageUpdateRequestBodySchema.md  MessageUpdateResponseSchema.md  Record.md  RecordCreateRequestBodySchema.md  RecordCreateResponseSchema.md  RecordGetResponseSchema.md  (+5 more)
examples/: assistant.py
taskingai/: __init__.py  _version.py  api_client.py  config.py  configs.py  configuration.py  exceptions.py  rest.py
test/: config.py  main.py  pytest.ini  run_test.sh  test_assistant.py  test_assistant_api.py  test_assistant_create_request_body_schema.py  test_assistant_create_response_schema.py  test_assistant_get_response_schema.py  test_assistant_list_response_schema.py  test_assistant_update_request_body_schema.py  test_assistant_update_response_schema.py  test_base_success_empty_out_schema.py  test_chat.py  test_chat_create_request_body_schema.py  test_chat_create_response_schema.py  test_chat_generate_request_body_schema.py  test_chat_generate_response_schema.py  test_chat_generate_user_message.py  test_chunk.py  (+29 more)
(+423 files in other folders)
